--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@
   }
 
   .user-message {
-    background-color: #d1e7dd;
+    background-color: lightpink;
     align-self: flex-end;
   }
 
-   
+
   .bot-message {
     background-color: #e9ecef;
     align-self: flex-start;
